Multiple changes
- Java 11
- Junit 5 used instead of Junit 4
- added editorconfig